2011-09-21  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/stdfn.c|h (gp_basename) term/pslatex.trm (PSTEX_common_init):
	Move code from pslatex.trm to new function gp_basename which takes
	two different directory separators into account and does not change
	its argument.

2011-09-16  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Modify the commands used for rgb color 
	selection so that they are compatible with context as well as tikz.
	Bug #3401068

2011-09-16  Oliver Jennrich

	* term/lua/gnuplot-tikz.lua:  Update syntax used for setting line join
	properties.
	Bug #3410554

2011-09-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Fix building gnuplot.ps and gnuplot.pdf.
	Include figures in gnuplot.pdf. Define new targets 'console', 'windows'
	and 'pipes' to build different versions of gnuplot. Use separate
	file extensions for each version. Let 'make all' build all versions.
	Match 'install' target to Tatsuro Matsuoka's packages.

2011-09-09  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/doc2tex.c docs/titlepag.tex:  Tweak format of TeX documentation
	(no section numbers in table of contents, text width appropriate for
	paper size).

2011-09-09  Bastian Maerkisch  <bmaerkisch@web.de>

	src/win/wgnuplib.h src/win/wgraph.c src/win/wresourc.h term/win.trm:
	Add a toolbar to the graph window. Currently, it offers icons for Copy,
	Print, Save and Options. Additionaly, plot elements can be temporarily
	hidden, ie. without a `replot`. This is much like what can be done
	using canvas and svg terminals and is implemented using term->layer.

2011-09-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_image_or_update_axes):  "with image" from a
	function may not make sense, but at least it should not seqfault.
	Bug #3406642

2011-09-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_sum_expression): Simplify construction of summation
	action table.
	